--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-range": "^1.8.11",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
